# torchlpc

./: MANIFEST.in  cpuonly-torch.txt  dev-requirements.txt  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: python-package.yml  python-publish.yml  version.yml
tests/: test_extension.py
torchlpc/: __init__.py  _version.py  recurrence.py
torchlpc/csrc/: scan_cpu.cpp
torchlpc/csrc/cuda/: linear_recurrence.cu  scan.cu
torchlpc/csrc/linear_recurrent_net/: linear_recurrence.cu
